@@ -1,14 +1,19 @@
 package site.kikihi.custom.platform.application.service;
 
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Slice;
+import org.springframework.data.domain.SliceImpl;
+import org.springframework.data.elasticsearch.core.SearchHits;
 import site.kikihi.custom.global.response.ErrorCode;
+import site.kikihi.custom.platform.adapter.in.web.dto.response.product.ProductListResponse;
 import site.kikihi.custom.platform.adapter.out.elasticSearch.ProductESDocument;
-import site.kikihi.custom.platform.adapter.out.elasticSearch.ProductESRepository;
 import site.kikihi.custom.platform.application.in.search.SearchUseCase;
+import site.kikihi.custom.platform.application.out.bookmark.BookmarkPort;
 import site.kikihi.custom.platform.application.out.search.SearchPort;
 import site.kikihi.custom.platform.application.out.user.UserPort;
+import site.kikihi.custom.platform.domain.bookmark.Bookmark;
 import site.kikihi.custom.platform.domain.product.Product;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.data.elasticsearch.client.elc.NativeQuery;
 import org.springframework.data.elasticsearch.core.ElasticsearchOperations;
 import org.springframework.data.elasticsearch.core.SearchHit;
@@ -21,6 +26,7 @@ import site.kikihi.custom.platform.domain.user.User;
 
 import java.util.List;
 import java.util.NoSuchElementException;
+import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -30,18 +36,21 @@ public class SearchService implements SearchUseCase {
 
     /// 의존성
     private final ElasticsearchOperations elasticsearchOperations;
-    private final ProductESRepository productESRepository;
     private final SearchPort port;
 
     /// 외부 의존성
     private final UserPort userPort;
+    private final BookmarkPort bookmarkPort;
 
     /// 스태틱
     private final Float minScore = 0.001f;
 
     /// 키워드 검색 (name, description)
     @Override
-    public List<Product> searchProducts(String keyword, int page, int size, UUID userId) {
+    public Slice<ProductListResponse> searchProducts(String keyword, Pageable pageable, UUID userId) {
+
+        /// Pageable 구성
+
         // match 쿼리 구성
         Query nameMatch = MatchQuery.of(m -> m.field("name").query(keyword))._toQuery();
         Query descMatch = MatchQuery.of(m -> m.field("description").query(keyword))._toQuery();
@@ -56,8 +65,8 @@ public class SearchService implements SearchUseCase {
         // NativeQuery
         NativeQuery query = NativeQuery.builder()
                 .withQuery(boolQuery)
-                .withPageable(PageRequest.of(page, size)) //page-> from으로 자동 변환(from=page * size)
-                .withMinScore(minScore)  // <<-- 추가됨
+                .withPageable(pageable)
+                .withMinScore(minScore)
                 .build();
 
         /// 로그인 한 유저가 확인한다면, 최근 검색 기록 DB에 저장하기
@@ -66,20 +75,37 @@ public class SearchService implements SearchUseCase {
             /// 유저 조회
             User user = getUser(userId);
 
-            /// 자동저장이 ON인 유저만 저장한다.
-            if (user.isSearch()) {
+            /// DB에 최신 검색어 저장하기
+            Search search = Search.of(user.getId(), keyword);
+            port.saveSearch(search);
 
-                /// DB에 최신 검색어 저장하기
-                Search search = Search.of(user.getId(), keyword);
-                port.saveSearch(search);
-            }
         }
 
-        return elasticsearchOperations.search(query, ProductESDocument.class)
-                .stream()
+        SearchHits<ProductESDocument> searchHits = elasticsearchOperations.search(query, ProductESDocument.class);
+
+        /// 결과물 출력
+        List<Product> elasticProducts = searchHits.stream()
                 .map(SearchHit::getContent)
                 .map(ProductESDocument::toDomain)
-                .collect(Collectors.toList());
+                .toList();
+
+        /// 페이징 처리
+        // 현재 페이지 결과 수
+        boolean hasNext = checkNext(pageable.getPageNumber(), pageable.getPageSize(), searchHits);
+
+        Slice<Product> products = new SliceImpl<>(elasticProducts, pageable, hasNext);
+
+        return toProductListResponse(userId, products);
+    }
+
+    private boolean checkNext(int page, int size, SearchHits<ProductESDocument> searchHits) {
+
+        long totalHits = searchHits.getTotalHits();
+
+        // 현재 페이지와 size를 이용해 현재 페이지가 마지막 페이지인지 판단
+        boolean hasNext = (page + 1) * size < totalHits;
+
+        return hasNext;
     }
 
     @Override
@@ -129,46 +155,34 @@ public class SearchService implements SearchUseCase {
         port.deleteALlSearch(user.getId());
     }
 
-    @Override
-    public boolean checkSearch(UUID userId) {
-
-        /// 유저 예외 처리
-        User user = getUser(userId);
-
-        /// 유저의 여부 체크
-        return user.isSearch();
-    }
-
-
     /**
-     * 검색 기록을 저장하지않도록 끕니다.
-     * @param userId    유저 ID
+     * 키워드에 따른 검색으로 검색 결과가 몇 개인지
+     * @param keyword   키워드
      */
     @Override
-    public void turnOffMySearchKeyword(UUID userId) {
+    public long countByKeyword(String keyword) {
+        // match 쿼리 구성
+        Query nameMatch = MatchQuery.of(m -> m.field("name").query(keyword))._toQuery();
+        Query descMatch = MatchQuery.of(m -> m.field("description").query(keyword))._toQuery();
 
-        /// 유저
-        User user = getUser(userId);
+        // bool 쿼리
+        Query boolQuery = BoolQuery.of(b -> b
+                .should(nameMatch)
+                .should(descMatch)
+                .minimumShouldMatch("1")
+        )._toQuery();
 
-        /// 켜져있을때만 끌 수있게
-        if (user.isSearch()) {
-            user.turnOffSearch();
-            userPort.updateUser(user);
-        }
+        // NativeQuery - 페이징 없이 전체 개수 조회용
+        NativeQuery query = NativeQuery.builder()
+                .withQuery(boolQuery)
+                .withMinScore(minScore)
+                .build();
+
+        SearchHits<ProductESDocument> searchHits = elasticsearchOperations.search(query, ProductESDocument.class);
+
+        return searchHits.getTotalHits();
     }
 
-    @Override
-    public void turnOnMySearchKeyword(UUID userId) {
-        /// 유저
-        User user = getUser(userId);
-
-        /// 꺼져있을때만 켤 수있게
-        if (!user.isSearch()) {
-            user.turnOnSearch();
-            userPort.updateUser(user);
-        }
-
-    }
 
     /// 유저 조회
     private User getUser(UUID userId) {
@@ -183,6 +197,43 @@ public class SearchService implements SearchUseCase {
 
         return port.getSearch(searchId)
                 .orElseThrow(() -> new NoSuchElementException(ErrorCode.SEARCH_NOT_FOUND.getMessage()));
+    }
+
+
+    /**
+     * 상품 목록 조회를 진행할때, 북마크 여부를 파악하는 함수입니다.
+     * @param userId        유저 ID
+     * @param products      상품 목록
+     */
+    private Slice<ProductListResponse> toProductListResponse(UUID userId, Slice<Product> products) {
+        /// 응답 값
+        List<ProductListResponse> dtoList;
+
+        /// 상품 목록 꺼내서 DTO 변환
+        List<Product> content = products.getContent();
+
+        /// 로그인 하지 않은 유저가 확인한다면
+        if (userId == null) {
+
+            /// 하트가 전부 false 되는 로직
+            dtoList = ProductListResponse.from(content);
+
+            /// 새로운 Slice 객체로 생성
+            return new SliceImpl<>(dtoList, products.getPageable(), products.hasNext());
+        }
+
+        /// 유저가 북마크를 했는지 체크
+        List<Bookmark> bookmarks = bookmarkPort.getBookmarksByUserId(userId);
+
+        /// 북마크된 상품 ID만 추출
+        Set<String> bookmarkedProductIds = bookmarks.stream()
+                .map(Bookmark::getProductId)
+                .collect(Collectors.toSet());
+
+        // 북마크 여부 반영하여 DTO 변환
+        dtoList = ProductListResponse.from(content, bookmarkedProductIds);
+
+        return new SliceImpl<>(dtoList, products.getPageable(), products.hasNext());
     }
 
 }
